# font-ocr

./: Cargo.toml  LICENSE  README.md  build.rs  notes
src/: brute.rs  brutecorr.rs  knn.rs  main.rs  ncc.cpp  ncc.rs
