[package]
name = "focr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
font-kit = { version = "0.14.3", features = ["freetype"] }
image = {version = "0.25.9", default-features=false, features=["rayon", "pnm", "png"] }
pathfinder_geometry = "0.5.1"
rayon = "1.11.0"

[[bin]]
name = "brute"
path = "src/brute.rs"

[profile.release]
debug = "line-tables-only"
